# xproto-rs

./: .gitmodules
codegen/: Cargo.toml
codegen/src/: deduction.rs  formatting.rs  header.rs  ident.rs  lib.rs  output.rs  util.rs
examples/: Cargo.toml
xproto/: Cargo.toml  build.rs
xproto/src/: conversion.rs  enums.rs  error.rs  fd.rs  lib.rs  message.rs  protocol.rs  xid.rs
xproto/xcbproto/: bigreq.xml  composite.xml  damage.xml  dpms.xml  dri2.xml  dri3.xml  ge.xml  glx.xml  present.xml  randr.xml  record.xml  render.xml  res.xml  screensaver.xml  shape.xml  shm.xml  sync.xml  xc_misc.xml  xevie.xml  xf86dri.xml  xf86vidmode.xml  xfixes.xml  xinerama.xml  xinput.xml  xkb.xml  xprint.xml  xproto.xml  xselinux.xml  xtest.xml  xv.xml  xvmc.xml
xserver/: Cargo.toml
xserver/src/: codec.rs  id_allocator.rs  lib.rs  parse_display.rs  stream.rs  xauth.rs
