[package]
name = "examples"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
xproto = { version = "^0.1.0", features = ["present"], path = "../xproto" }
xserver = { version = "^0.1.0", path = "../xserver" }
futures = { version = "^0.3.4" }
tokio = { version = "*", features = ["macros"] }
bytes = "^0.5.6"
