[package]
name = "xproto"
version = "0.1.0" # keep in sync with html_root_url
authors = ["arcnmx"]
edition = "2018"

description = ""
keywords = ["x11", "xorg", "xcb", "x"]

#documentation = "https://docs.rs/???"
#repository = "https://github.com/arcnmx/????"
readme = "../README.md"
license = "MIT"

[build-dependencies]
xcodegen = { version = "^0.1.0", path = "../codegen" }

[dependencies]
enumflags2 = "^0.6.4"
byteorder = "^1.3.4"
zerocopy = "^0.3.0"
bytes = "^0.5.6"

[features]
bigreq = []
composite = ["xfixes"]
damage = ["xfixes"]
dpms = []
dri2 = []
dri3 = []
ge = []
glx = []
present = ["sync", "xfixes", "randr"]
randr = ["render"]
record = []
render = []
res = []
screensaver = []
shape = []
shm = []
sync = []
xc_misc = []
xevie = []
xf86dri = []
xf86vidmode = []
xfixes = ["render", "shape"]
xinerama = []
xinput = ["xfixes"]
xkb = []
xprint = []
xselinux = []
xtest = []
xv = ["shm"]
xvmc = ["xv"]

all = [
"bigreq",
"composite",
"damage",
"dpms",
"dri2",
"dri3",
"ge",
"glx",
"present",
"randr",
"record",
"render",
"res",
"screensaver",
"shape",
"shm",
"sync",
"xc_misc",
"xevie",
"xf86dri",
"xf86vidmode",
"xfixes",
"xinerama",
"xinput",
"xkb",
"xprint",
"xselinux",
"xtest",
"xv",
"xvmc",
]
