[package]
name = "xserver"
version = "0.1.0" # keep in sync with html_root_url
authors = ["arcnmx"]
edition = "2018"

description = ""
keywords = ["x11", "xorg", "xcb", "x"]

#documentation = "https://docs.rs/???"
#repository = "https://github.com/arcnmx/????"
readme = "../README.md"
license = "MIT"

[dependencies]
enumflags2 = "^0.6.4"
byteorder = "^1.3.4"
zerocopy = "^0.5.0"
bytes = "^1.0.0"
xproto = { version = "^0.1.0", features = [], path = "../xproto" }
futures = { version = "^0.3.4", features = ["bilock", "unstable"], optional = true }
tokio = { version = "^1.0.0", default-features = false, features = ["net", "io-util"], optional = true }
tokio-util = { version = "^0.6.0", default-features = false, features = ["codec"], optional = true }
gethostname = "^0.2.1"

[features]
default = ["with-tokio"]
xc_misc = ["xproto/xc_misc"]

with-tokio = ["tokio", "tokio-util", "futures"]
